5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4132/executions/1723_2508.log
== SUBMITION (2019-05-14 10:21:47) 
-- CODE:
n = int(input("Digite n: "))

cont = 1
n1=0
n2=0
n3=0
n4=4
sinal=1

while(cont <= n):
	fi = fi + (n4/(n1*n2*n3))*sinal 
   n4=4
	n1=n1+2
	n2=(n2-1)+3
	n3=(n3-2)+4
	sinal = sinal*-1
	
print(round(fi+3,8))
-- EXECUTION TIME:
0.181917
-- ERROR:
  File "/home/codebench/codes/1723/2508/main.py", line 12
    n4=4
       ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:21:48) 
-- CODE:
n = int(input("Digite n: "))

cont = 1
n1=0
n2=0
n3=0
n4=4
sinal=1

while(cont <= n):
	fi = fi + (n4/(n1*n2*n3))*sinal 
   n4=4
	n1=n1+2
	n2=(n2-1)+3
	n3=(n3-2)+4
	sinal = sinal*-1
	
print(round(fi+3,8))
-- ERROR:
File "XXXX", line 12
    n4=4
       ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:21:57) 
-- CODE:
n = int(input("Digite n: "))

cont = 1
n1=0
n2=0
n3=0
n4=0
sinal=1

while(cont <= n):
	fi = fi + (n4/(n1*n2*n3))*sinal 
   n4=4
	n1=n1+2
	n2=(n2-1)+3
	n3=(n3-2)+4
	sinal = sinal*-1
	
print(round(fi+3,8))
-- EXECUTION TIME:
0.171984
-- ERROR:
  File "/home/codebench/codes/1723/2508/main.py", line 12
    n4=4
       ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:21:58) 
-- CODE:
n = int(input("Digite n: "))

cont = 1
n1=0
n2=0
n3=0
n4=0
sinal=1

while(cont <= n):
	fi = fi + (n4/(n1*n2*n3))*sinal 
   n4=4
	n1=n1+2
	n2=(n2-1)+3
	n3=(n3-2)+4
	sinal = sinal*-1
	
print(round(fi+3,8))
-- ERROR:
File "XXXX", line 12
    n4=4
       ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:22:20) 
-- CODE:
n = int(input("Digite n: "))

cont = 1
n1=0
n2=0
n3=0
n4=0
sinal=1

while(cont <= n):
	fi = fi + (n4/(n1*n2*n3))*sinal 
   n4=4*1
	n1=n1+2
	n2=(n2-1)+3
	n3=(n3-2)+4
	sinal = sinal*-1
	
print(round(fi+3,8))
-- EXECUTION TIME:
0.204293
-- ERROR:
  File "/home/codebench/codes/1723/2508/main.py", line 12
    n4=4*1
         ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:22:20) 
-- CODE:
n = int(input("Digite n: "))

cont = 1
n1=0
n2=0
n3=0
n4=0
sinal=1

while(cont <= n):
	fi = fi + (n4/(n1*n2*n3))*sinal 
   n4=4*1
	n1=n1+2
	n2=(n2-1)+3
	n3=(n3-2)+4
	sinal = sinal*-1
	
print(round(fi+3,8))
-- ERROR:
File "XXXX", line 12
    n4=4*1
         ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:22:53) 
-- CODE:
n = int(input("Digite n: "))

cont = 1
n1=0
n2=0
n3=0
n4=4
sinal=1

while(cont <= n):
	fi = fi + (n4/(n1*n2*n3))*sinal 
   
	n1=n1+2
	n2=(n2-1)+3
	n3=(n3-2)+4
	sinal = sinal*-1
	
print(round(fi+3,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    fi = fi + (n4/(n1*n2*n3))*sinal 
NameError: name 'fi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:23:10) 
-- CODE:
n = int(input("Digite n: "))

cont = 1
n1=0
n2=0
n3=0
n4=4
sinal=1
fi=0
while(cont <= n):
	fi = fi + (n4/(n1*n2*n3))*sinal 
   
	n1=n1+2
	n2=(n2-1)+3
	n3=(n3-2)+4
	sinal = sinal*-1
	
print(round(fi+3,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    fi = fi + (n4/(n1*n2*n3))*sinal 
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:24:43) 
-- CODE:
n = int(input("Digite n: "))

cont = 1
n1=0
n2=0
n3=0
n4=4
sinal=1
fi=0
if(n!=1):
   while(cont <= n):
		fi = fi + (n4/(n1*n2*n3))*sinal 
		n1=n1+2
		n2=(n2-1)+3
		n3=(n3-2)+4
		sinal = sinal*-1
	print(round(fi+3,8))
else:	
    print(round(fi+3,8))
-- ERROR:
File "XXXX", line 12
    fi = fi + (n4/(n1*n2*n3))*sinal 
                                   ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:25:01) 
-- CODE:
n = int(input("Digite n: "))

cont = 1
n1=0
n2=0
n3=0
n4=4
sinal=1
fi=0
if(n!=1):
   while(cont <= n):
			fi = fi + (n4/(n1*n2*n3))*sinal 
			n1=n1+2
			n2=(n2-1)+3
			n3=(n3-2)+4
			sinal = sinal*-1
	print(round(fi+3,8))
else:	
    print(round(fi+3,8))
-- ERROR:
File "XXXX", line 12
    fi = fi + (n4/(n1*n2*n3))*sinal 
                                   ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:25:32) 
-- CODE:
n = int(input("Digite n: "))

cont = 1
n1=0
n2=0
n3=0
n4=4
sinal=1
fi=0

while(cont <= n):
	fi = fi + (n4/(n1*n2*n3))*sinal 
	n1=n1+2
	n2=(n2-1)+3
	n3=(n3-2)+4
	sinal = sinal*-1
	
print(round(fi+3,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    fi = fi + (n4/(n1*n2*n3))*sinal 
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:29:27) 
-- CODE:
n = int(input("Digite n: "))

cont = 1
n1=0
n2=0
n3=0
n4=4
sinal=1
fi=0
if(n==1)
	print(round(fi+3,8))
else:
	while(cont <= n):
	fi = fi + (n4/(n1*n2*n3))*sinal 
	n1=n1+2
	n2=(n2-1)+3
	n3=(n3-2)+4
	sinal = sinal*-1
	
print(round(fi+3,8))
-- EXECUTION TIME:
0.153297
-- ERROR:
  File "/home/codebench/codes/1723/2508/main.py", line 10
    if(n==1)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:29:29) 
-- CODE:
n = int(input("Digite n: "))

cont = 1
n1=0
n2=0
n3=0
n4=4
sinal=1
fi=0
if(n==1)
	print(round(fi+3,8))
else:
	while(cont <= n):
	fi = fi + (n4/(n1*n2*n3))*sinal 
	n1=n1+2
	n2=(n2-1)+3
	n3=(n3-2)+4
	sinal = sinal*-1
	
print(round(fi+3,8))
-- ERROR:
File "XXXX", line 10
    if(n==1)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:29:38) 
-- CODE:
n = int(input("Digite n: "))

cont = 1
n1=0
n2=0
n3=0
n4=4
sinal=1
fi=0
if(n==1):
	print(round(fi+3,8))
else:
	while(cont <= n):
	fi = fi + (n4/(n1*n2*n3))*sinal 
	n1=n1+2
	n2=(n2-1)+3
	n3=(n3-2)+4
	sinal = sinal*-1
	
print(round(fi+3,8))
-- ERROR:
File "XXXX", line 14
    fi = fi + (n4/(n1*n2*n3))*sinal 
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:32:19) 
-- CODE:
n = int(input("Digite n: "))

cont = 1
n1=0
n2=0
n3=0
n4=4
sinal=1
fi=0
if(n==1):
	print(round(fi+3,8))
else:
	n1=2
	n2=3
	n3=4
	n4=4
	while(cont <= n):
	fi = fi + (n4/(n1*n2*n3))*sinal 
	n1=n1+2
	n2=(n2-1)+3
	n3=(n3-2)+4
	sinal = sinal*-1
	
print(round(fi+3,8))
-- EXECUTION TIME:
0.155934
-- ERROR:
  File "/home/codebench/codes/1723/2508/main.py", line 18
    fi = fi + (n4/(n1*n2*n3))*sinal 
     ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:32:20) 
-- CODE:
n = int(input("Digite n: "))

cont = 1
n1=0
n2=0
n3=0
n4=4
sinal=1
fi=0
if(n==1):
	print(round(fi+3,8))
else:
	n1=2
	n2=3
	n3=4
	n4=4
	while(cont <= n):
	fi = fi + (n4/(n1*n2*n3))*sinal 
	n1=n1+2
	n2=(n2-1)+3
	n3=(n3-2)+4
	sinal = sinal*-1
	
print(round(fi+3,8))
-- ERROR:
File "XXXX", line 18
    fi = fi + (n4/(n1*n2*n3))*sinal 
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:32:36) 
-- CODE:
n = int(input("Digite n: "))

cont = 1
n1=0
n2=0
n3=0
n4=4
sinal=1
fi=0
if(n==1):
	print(round(fi+3,8))
else:
	n1=2
	n2=3
	n3=4
	n4=4
	while(cont <= n):
		fi = fi + (n4/(n1*n2*n3))*sinal 
		n1=n1+2
		n2=(n2-1)+3
		n3=(n3-2)+4
		sinal = sinal*-1
	
print(round(fi+3,8))
-- ERROR:
File "XXXX", line 18
    fi = fi + (n4/(n1*n2*n3))*sinal 
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:32:58) 
-- CODE:
n = int(input("Digite n: "))

cont = 1
n1=0
n2=0
n3=0
n4=4
sinal=1
fi=0
if(n==1):
	print(round(fi+3,8))
else:
	n1=2
	n2=3
	n3=4
	n4=4
	while(cont <= n):
		fi = fi + (n4/(n1*n2*n3))*sinal 
		n1=n1+2
		n2=(n2-1)+3
		n3=(n3-2)+4
		sinal = sinal*-1
print(round(fi+3,8))
-- ERROR:
File "XXXX", line 18
    fi = fi + (n4/(n1*n2*n3))*sinal 
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:33:12) 
-- CODE:
n = int(input("Digite n: "))

cont = 1
n1=0
n2=0
n3=0
n4=4
sinal=1
fi=0
if(n==1):
	print(round(fi+3,8))
else:
	n1=2
	n2=3
	n3=4
	n4=4
	while(cont <= n):
		fi = fi + (n4/(n1*n2*n3))*sinal 
		n1=n1+2
		n2=(n2-1)+3
		n3=(n3-2)+4
		sinal = sinal*-1
	print(round(fi+3,8))
-- ERROR:
File "XXXX", line 18
    fi = fi + (n4/(n1*n2*n3))*sinal 
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:33:16) 
-- CODE:
n = int(input("Digite n: "))

cont = 1
n1=0
n2=0
n3=0
n4=4
sinal=1
fi=0
if(n==1):
	print(round(fi+3,8))
else:
	n1=2
	n2=3
	n3=4
	n4=4
	while(cont <= n):
		fi = fi + (n4/(n1*n2*n3))*sinal 
		n1=n1+2
		n2=(n2-1)+3
		n3=(n3-2)+4
		sinal = sinal*-1
	print(round(fi+3,8))
-- ERROR:
File "XXXX", line 18
    fi = fi + (n4/(n1*n2*n3))*sinal 
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:33:27) 
-- CODE:
n = int(input("Digite n: "))

cont = 1
n1=0
n2=0
n3=0
n4=4
sinal=1
fi=0
if(n==1):
	print(round(fi+3,8))
else:
	n1=2
	n2=3
	n3=4
	n4=4
	while(cont <= n):
		fi = fi + (n4/(n1*n2*n3))*sinal 
		n1=n1+2
		n2=(n2-1)+3
		n3=(n3-2)+4
		sinal = sinal*-1
	print(round(fi+3,8))
-- ERROR:
File "XXXX", line 18
    fi = fi + (n4/(n1*n2*n3))*sinal 
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:34:00) 
-- CODE:
n = int(input("Digite n: "))

cont = 1
n1=0
n2=0
n3=0
n4=4
sinal=1
fi=0
if(n==1):
	print(round(fi+3,8))
else:
	n1=2
	n2=3
	n3=4
	n4=4
	while(cont <= n):
		fi = fi + (n4/(n1*n2*n3))*sinal 
		n1=n1+2
		n2=(n2-1)+3
		n3=(n3-2)+4
		sinal = sinal*-1
	print(round(fi+3,8))
-- ERROR:
File "XXXX", line 18
    fi = fi + (n4/(n1*n2*n3))*sinal 
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:34:44) 
-- CODE:
n = int(input("Digite n: "))

cont = 1
n1=0
n2=0
n3=0
n4=4
sinal=1
fi=0
if(n==1):
	print(round(fi+3,8))
elif(n>1):
	n1=2
	n2=3
	n3=4
	n4=4
	while(cont <= n):
		fi = fi + (n4/(n1*n2*n3))*sinal 
		n1=n1+2
		n2=(n2-1)+3
		n3=(n3-2)+4
		sinal = sinal*-1
	print(round(fi+3,8))
-- ERROR:
File "XXXX", line 18
    fi = fi + (n4/(n1*n2*n3))*sinal 
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:34:54) 
-- CODE:
n = int(input("Digite n: "))

cont = 1
n1=0
n2=0
n3=0
n4=4
sinal=1
fi=0
if(n==1):
	print(round(fi+3,8))
elif(n>1):
	n1=2
	n2=3
	n3=4
	n4=4
	while(cont <= n):
		fi = fi + (n4/(n1*n2*n3))*sinal 
		n1=n1+2
		n2=(n2-1)+3
		n3=(n3-2)+4
		sinal = sinal*-1
	print(round(fi+3,8))
-- ERROR:
File "XXXX", line 18
    fi = fi + (n4/(n1*n2*n3))*sinal 
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:39:48) 
-- CODE:
n = int(input("Digite n: "))

cont = 1
n1=0
n2=0
n3=0
n4=4
sinal=1
fi=0
if(n==1):
	print(round(fi+3,8))
elif(n>1):
	n1=2
	n2=3
	n3=4
	n4=4
	while(cont <= n):
		fi = fi + (n4/(n1*n2*n3))*sinal 
		n1=n1+2
		n2=(n2-1)+3
		n3=(n3-2)+4
		sinal = sinal*-1
	print(round(fi+3,8))
-- ERROR:
File "XXXX", line 18
    fi = fi + (n4/(n1*n2*n3))*sinal 
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:40:12) 
-- CODE:
n = int(input("Digite n: "))

cont = 1
n1=0
n2=0
n3=0
n4=4
sinal=1
fi=0
if(n==1):
	print(round(fi+3,8))
elif(n>1):
	n1=2
	n2=3
	n3=4
	n4=4
	while(cont <= n):
		fi = fi + (n4/(n1*n2*n3))*sinal 
		n1=n1+2
		n2=(n2-1)+3
		n3=(n3-2)+4
		sinal = sinal*-1
	print(round(fi+3,8))
-- ERROR:
File "XXXX", line 18
    fi = fi + (n4/(n1*n2*n3))*sinal 
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:40:43) 
-- CODE:
n = int(input("Digite n: "))

cont = 1
n1=0
n2=0
n3=0
n4=4
sinal=1
fi=0
if(n==1):
	print(round(fi+3,8))
else:
	n1=2
	n2=3
	n3=4
	n4=4
	while(cont <= n):
		fi = fi + (n4/(n1*n2*n3))*sinal 
		n1=n1+2
		n2=(n2-1)+3
		n3=(n3-2)+4
		sinal = sinal*-1
	print(round(fi+3,8))
-- ERROR:
File "XXXX", line 18
    fi = fi + (n4/(n1*n2*n3))*sinal 
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:47:16) 
-- CODE:
n = int(input("Digite n: "))
fi = 3
aux=0
i=1
while(cont<n):
	fi = fi + ( 4 * aux / ( 2 * i )*(2*i+1)*(2*i+2))
	aux = 1
	i=i+1
print(round(fi,8))
	
	
-- EXECUTION TIME:
0.144775
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2508/main.py", line 5, in <module>
    while(cont<n):
NameError: name 'cont' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:47:17) 
-- CODE:
n = int(input("Digite n: "))
fi = 3
aux=0
i=1
while(cont<n):
	fi = fi + ( 4 * aux / ( 2 * i )*(2*i+1)*(2*i+2))
	aux = 1
	i=i+1
print(round(fi,8))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while(cont<n):
NameError: name 'cont' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:47:28) 
-- CODE:
n = int(input("Digite n: "))
fi = 3
aux=0
i=1
while(i<n):
	fi = fi + ( 4 * aux / ( 2 * i )*(2*i+1)*(2*i+2))
	aux = 1
	i=i+1
print(round(fi,8))
	
	
-- OUTPUT:
115.33333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:47:35) 
-- CODE:
n = int(input("Digite n: "))
fi = 3
aux=0
i=1
while(i<n):
	fi = fi + ( 4 * aux / ( 2 * i )*(2*i+1)*(2*i+2))
	aux = 1
	i=i+1
print(round(fi,8))
	
	
-- EXECUTION TIME:
0.225668
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
115.33333333
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
2093.58143482
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
1576.98043231
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:47:36) 
-- CODE:
n = int(input("Digite n: "))
fi = 3
aux=0
i=1
while(i<n):
	fi = fi + ( 4 * aux / ( 2 * i )*(2*i+1)*(2*i+2))
	aux = 1
	i=i+1
print(round(fi,8))
	
	
-- OUTPUT:
115.33333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:47:40) 
-- CODE:
n = int(input("Digite n: "))
fi = 3
aux=0
i=1
while(i<n):
	fi = fi + ( 4 * aux / ( 2 * i )*(2*i+1)*(2*i+2))
	aux = 1
	i=i+1
print(round(fi,8))
	
	
-- OUTPUT:
115.33333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:47:45) 
-- CODE:
n = int(input("Digite n: "))
fi = 3
aux=0
i=1
while(i<n):
	fi = fi + ( 4 * aux / ( 2 * i )*(2*i+1)*(2*i+2))
	aux = 1
	i=i+1
print(round(fi,8))
	
	
-- OUTPUT:
115.33333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:47:57) 
-- CODE:
n = int(input("Digite n: "))
fi = 3
aux=0
i=1
while(i<n):
	fi = fi + ( 4 * aux / ( 2 * i )*(2*i+1)*(2*i+2))
	aux = 1
	i=i+1
print(round(fi,8))
	
	
-- OUTPUT:
115.33333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:48:50) 
-- CODE:
n = int(input("Digite n: "))
fi = 3
aux=0
i=0
while(i<n):
	fi = fi + ( 4 * aux / ( 2 * i )* ( 2 * i + 1 ) * (2 * i + 2 ) )
	aux = 1
	i=i+1
print(round(fi,8))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    fi = fi + ( 4 * aux / ( 2 * i )* ( 2 * i + 1 ) * (2 * i + 2 ) )
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:48:55) 
-- CODE:
n = int(input("Digite n: "))
fi = 3
aux=0
i=0
while(i<n):
	fi = fi + ( 4 * aux / ( 2 * i )* ( 2 * i + 1 ) * (2 * i + 2 ) )
	aux = 1
	i=i+1
print(round(fi,8))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    fi = fi + ( 4 * aux / ( 2 * i )* ( 2 * i + 1 ) * (2 * i + 2 ) )
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:48:59) 
-- CODE:
n = int(input("Digite n: "))
fi = 3
aux=0
i=1
while(i<n):
	fi = fi + ( 4 * aux / ( 2 * i )* ( 2 * i + 1 ) * (2 * i + 2 ) )
	aux = 1
	i=i+1
print(round(fi,8))
	
	
-- OUTPUT:
115.33333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:49:50) 
-- CODE:
n = int(input("Digite n: "))
fi = 3
aux=0
i=1
sinal=1
while(i<n):
	fi = fi + ( 4 * aux / ( 2 * i )* ( 2 * i + 1 ) * (2 * i + 2 ) )*sinal
	aux = 1
	sinal=sinal*-1
	i=i+1
print(round(fi,8))
	
	
-- EXECUTION TIME:
0.193659
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
-34.66666667
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
81.8655618
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
-90.3354407
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:49:51) 
-- CODE:
n = int(input("Digite n: "))
fi = 3
aux=0
i=1
sinal=1
while(i<n):
	fi = fi + ( 4 * aux / ( 2 * i )* ( 2 * i + 1 ) * (2 * i + 2 ) )*sinal
	aux = 1
	sinal=sinal*-1
	i=i+1
print(round(fi,8))
	
	
-- OUTPUT:
-34.66666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:49:57) 
-- CODE:
n = int(input("Digite n: "))
fi = 3
aux=0
i=1
sinal=1
while(i<n):
	fi = fi + ( 4 * aux / ( 2 * i )* ( 2 * i + 1 ) * (2 * i + 2 ) )*sinal
	aux = 1
	sinal=sinal*-1
	i=i+1
print(round(fi,8))
	
	
-- OUTPUT:
-34.66666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:51:18) 
-- CODE:
n = int(input("Digite n: "))
fi = 3
aux=0
i=1
sinal=1
while(i<n):
	fi = fi + ( 4 * aux / ( 2 * i )* ( 2 * i + 1 ) * (2 * i + 2 ) )*sinal
	aux = 1
	sinal=sinal*-1
	i=i+1
print(round(fi,8))
	
	
-- EXECUTION TIME:
0.131375
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
-34.66666667
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
81.8655618
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
-90.3354407
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:51:19) 
-- CODE:
n = int(input("Digite n: "))
fi = 3
aux=0
i=1
sinal=1
while(i<n):
	fi = fi + ( 4 * aux / ( 2 * i )* ( 2 * i + 1 ) * (2 * i + 2 ) )*sinal
	aux = 1
	sinal=sinal*-1
	i=i+1
print(round(fi,8))
	
	
-- OUTPUT:
-34.66666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:51:24) 
-- CODE:
n = int(input("Digite n: "))
fi = 3
aux=0
i=1
sinal=1
while(i<n):
	fi = fi + ( 4 * aux / ( 2 * i )* ( 2 * i + 1 ) * (2 * i + 2 ) )*sinal
	aux = 1
	sinal=sinal*-1
	i=i+1
print(round(fi,8))
	
	
-- OUTPUT:
-34.66666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:55:50) 
-- CODE:
n = int(input("Digite n: "))
soma = 0
aux=0
i=1
sinal=1
while(i<n):
	soma =  soma + (4*aux/(2*i)*(2*i+1)*(2*i+2))*sinal
	aux=1
	i=i+1
	sinal = sinal*-1
	
print(round(fi+3,8))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(round(fi+3,8))
NameError: name 'fi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:55:59) 
-- CODE:
n = int(input("Digite n: "))
soma = 0
aux=0
i=1
sinal=1
while(i<n):
	soma =  soma + (4*aux/(2*i)*(2*i+1)*(2*i+2))*sinal
	aux=1
	i=i+1
	sinal = sinal*-1
	
print(round(soma+3,8))
	
	
-- OUTPUT:
-34.66666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:56:05) 
-- CODE:
n = int(input("Digite n: "))
soma = 0
aux=0
i=1
sinal=1
while(i<n):
	soma =  soma + (4*aux/(2*i)*(2*i+1)*(2*i+2))*sinal
	aux=1
	i=i+1
	sinal = sinal*-1
	
print(round(soma+3,8))
	
	
-- OUTPUT:
-34.66666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:56:09) 
-- CODE:
n = int(input("Digite n: "))
soma = 0
aux=0
i=1
sinal=1
while(i<n):
	soma =  soma + (4*aux/(2*i)*(2*i+1)*(2*i+2))*sinal
	aux=1
	i=i+1
	sinal = sinal*-1
	
print(round(soma+3,8))
	
	
-- OUTPUT:
-34.66666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:56:32) 
-- CODE:
n = int(input("Digite n: "))
soma = 0
aux=0
i=1
sinal=1
while(i<=n):
	soma =  soma + (4*aux/(2*i)*(2*i+1)*(2*i+2))*sinal
	aux=1
	i=i+1
	sinal = sinal*-1
	
print(round(soma+3,8))
	
	
-- OUTPUT:
18.13333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:56:38) 
-- CODE:
n = int(input("Digite n: "))
soma = 0
aux=0
i=1
sinal=1
while(i<=n):
	soma =  soma + (4*aux/(2*i)*(2*i+1)*(2*i+2))*sinal
	aux=1
	i=i+1
	sinal = sinal*-1
	
print(round(soma+3,8))
	
	
-- OUTPUT:
18.13333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:59:42) 
-- CODE:
n = int(input("Digite n: "))
soma = 3
i=1
sinal=1
while(i<=n):
	soma =  soma + (4/(2*i)*(2*i+1)*(2*i+2))*sinal
	i=i+1
	sinal = sinal*-1
	
print(round(soma,8))
	
	
-- OUTPUT:
42.13333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:59:48) 
-- CODE:
n = int(input("Digite n: "))
soma = 3
i=1
sinal=1
while(i<=n):
	soma =  soma + (4/(2*i)*(2*i+1)*(2*i+2))*sinal
	i=i+1
	sinal = sinal*-1
	
print(round(soma,8))
	
	
-- OUTPUT:
42.13333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:00:23) 
-- CODE:
n = int(input("Digite n: "))
soma = 3
i=1
sinal=1
while(i<=n):
	soma =  soma + (4/(2*i)*(2*i+1)*(2*i+2))*sinal
	print(soma)
	print((4/(2*i)*(2*i+1)*(2*i+2))*sinal)
	i=i+1
	sinal = sinal*-1
	
print(round(soma,8))
	
	
-- OUTPUT:
27.0
24.0
-3.0
-30.0
34.33333333333333
37.33333333333333
-10.666666666666671
-45.0
42.13333333333333
52.800000000000004
42.13333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:01:45) 
-- CODE:
n = int(input("Digite n: "))
soma = 3
i=1
sinal=1
while(i<=n):
	soma =  soma + (4/((2*i)*(2*i+1)*(2*i+2)))*sinal
	print(soma)
	print((4/(2*i)*(2*i+1)*(2*i+2))*sinal)
	i=i+1
	sinal = sinal*-1
	
print(round(soma,8))
	
	
-- OUTPUT:
3.1666666666666665
24.0
3.1333333333333333
-30.0
3.145238095238095
37.33333333333333
3.1396825396825396
-45.0
3.1427128427128426
52.800000000000004
3.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:02:15) 
-- CODE:
n = int(input("Digite n: "))
soma = 3
i=1
sinal=1
while(i<=n):
	soma =  soma + (4/((2*i)*(2*i+1)*(2*i+2)))*sinal
	print(soma)
	print((4/((2*i)*(2*i+1)*(2*i+2)))*sinal)
	i=i+1
	sinal = sinal*-1
	
print(round(soma,8))
	
	
-- OUTPUT:
3.1666666666666665
0.16666666666666666
3.1333333333333333
-0.03333333333333333
3.145238095238095
0.011904761904761904
3.1396825396825396
-0.005555555555555556
3.1427128427128426
0.0030303030303030303
3.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:02:52) 
-- CODE:
n = int(input("Digite n: "))
soma = 3
i=1
sinal=1
while(i<=n):
	soma =  soma + (4/((2*i)*(2*i+1)*(2*i+2)))*sinal
	i=i+1
	sinal = sinal*-1
	
print(round(soma,8))
	
	
-- OUTPUT:
3.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:03:05) 
-- CODE:
n = int(input("Digite n: "))
soma = 3
i=1
sinal=1
while(i<=n):
	soma =  soma + (4/((2*i)*(2*i+1)*(2*i+2)))*sinal
	print(soma)
	print((4/((2*i)*(2*i+1)*(2*i+2)))*sinal)
	i=i+1
	sinal = sinal*-1
	
print(round(soma,8))
	
	
-- OUTPUT:
3.1666666666666665
0.16666666666666666
3.1333333333333333
-0.03333333333333333
3.145238095238095
0.011904761904761904
3.1396825396825396
-0.005555555555555556
3.1427128427128426
0.0030303030303030303
3.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:04:03) 
-- CODE:
n = int(input("Digite n: "))
soma = 3
i=1
sinal=1
while(i<n):
	soma =  soma + (4/((2*i)*(2*i+1)*(2*i+2)))*sinal
	print(soma)
	print((4/((2*i)*(2*i+1)*(2*i+2)))*sinal)
	i=i+1
	sinal = sinal*-1
	
print(round(soma,8))
	
	
-- OUTPUT:
3.1666666666666665
0.16666666666666666
3.1333333333333333
-0.03333333333333333
3.145238095238095
0.011904761904761904
3.1396825396825396
-0.005555555555555556
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:04:07) 
-- CODE:
n = int(input("Digite n: "))
soma = 3
i=1
sinal=1
while(i<n):
	soma =  soma + (4/((2*i)*(2*i+1)*(2*i+2)))*sinal
	print(soma)
	print((4/((2*i)*(2*i+1)*(2*i+2)))*sinal)
	i=i+1
	sinal = sinal*-1
	
print(round(soma,8))
	
	
-- OUTPUT:
3.1666666666666665
0.16666666666666666
3.1333333333333333
-0.03333333333333333
3.145238095238095
0.011904761904761904
3.1396825396825396
-0.005555555555555556
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:04:31) 
-- CODE:
n = int(input("Digite n: "))
soma = 3
i=1
sinal=1
while(i<n):
	soma =  soma + (4/((2*i)*(2*i+1)*(2*i+2)))*sinal
	print(soma)
	print((4/((2*i)*(2*i+1)*(2*i+2)))*sinal)
	i=i+1
	sinal = sinal*-1
	
print(round(soma,8))
	
	
-- OUTPUT:
3.1666666666666665
0.16666666666666666
3.1333333333333333
-0.03333333333333333
3.145238095238095
0.011904761904761904
3.1396825396825396
-0.005555555555555556
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:04:48) 
-- CODE:
n = int(input("Digite n: "))
soma = 3.0
i=1
sinal=1
while(i<n):
	soma =  soma + (4/((2*i)*(2*i+1)*(2*i+2)))*sinal
	i=i+1
	sinal = sinal*-1
	
print(round(soma,8))
	
	
-- EXECUTION TIME:
0.157345
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
